[package]
name = "memrafted"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "*"
serde = { version = "1.0", features = ["derive"] }
serde_millis = "*"
serde_json = "*"
tokio = "*"
actix-web = "4"
env_logger = "0.10.0"
log = "*"
thiserror = "*"
anyhow = "*"
tracing = "*"
tracing-futures = "*"
async-channel = "1.8.0"
futures = "*"
reqwest = { version = "*", features = ["json"] }
rand = "*"